--- a/ProjectCursoMaestro/Base.lproj/Main.storyboard
+++ b/ProjectCursoMaestro/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Registrarse"/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yIm-Gg-dvL">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Beige Brown Minimalist Pet Shop - Logo (1).png" translatesAutoresizingMaskIntoConstraints="NO" id="yIm-Gg-dvL">
                                 <rect key="frame" x="76" y="78" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -130,10 +130,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y3y-UF-ijF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="817.55725190839689" y="-28.169014084507044"/>
+            <point key="canvasLocation" x="1459" y="-28"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Beige Brown Minimalist Pet Shop - Logo (1).png" width="328.5" height="138"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
